Task: Added the alignment for testimonials Fixed the footer issue.

--- a/app/assets/stylesheets/layout/_general.scss
+++ b/app/assets/stylesheets/layout/_general.scss
@@ -195,6 +195,10 @@
   margin-bottom: 20% !important;
 }
 
+.margin-bottom-20{
+  margin-bottom: 20px;
+}
+
 .text-align-right {
   text-align: right;
 }
@@ -315,4 +319,8 @@ and (-webkit-min-device-pixel-ratio: 1) {
 
 .bx-prev, .bx-next{
   z-index: 1 !important;
+}
+
+.padding-top-5 {
+  padding-top: 5%;
 }
