--- a/app/assets/stylesheets/modules/_site-footer.scss
+++ b/app/assets/stylesheets/modules/_site-footer.scss
@@ -96,7 +96,6 @@
         padding: 20px 40px;
         width: 220px;
         text-align: left;
-        margin-top: -63px;
         @include bp-at-least($breakpoint__sm) {
             position: absolute;
             right: 30px;
